# python-webserver-template

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.gitea/workflows/: build.yml
templates/: index.html
